force-app/main/default/objects/Family_History__c/Family_History__c.object-meta.xml
<CustomObject>
    <label>Family History</label>
    <nameField>
        <displayFormat>FH-{0000}</displayFormat>
        <label>Family History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>