force-app/main/default/objects/Family_History__c/fields/Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Death__c</fullName>
    <label>Cause of Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Disease</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Homicide</fullName>
            </value>
            <value>
                <fullName>Old Age</fullName>
            </value>
            <value>
                <fullName>Suicide</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>