force-app/main/default/objects/Family_History__c/fields/Client_List__c.field-meta.xml
<CustomField>
    <fullName>Client_List__c</fullName>
    <label>Client List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>