force-app/main/default/objects/Family_History__c/fields/Client_lists__c.field-meta.xml
<CustomField>
    <fullName>Client_lists__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client list</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family History (Client list)</relationshipLabel>
    <relationshipName>Family_History</relationshipName>
    <type>Lookup</type>
</CustomField>