force-app/main/default/objects/Family_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family History</relationshipLabel>
    <relationshipName>Family_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>