force-app/main/default/objects/Family_History__c/fields/Major_Health_Problems__c.field-meta.xml
<CustomField>
    <fullName>Major_Health_Problems__c</fullName>
    <label>Major Health Problems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuse</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Abuse and Neglect</fullName>
            </value>
            <value>
                <fullName>Anemia</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Problem</fullName>
            </value>
            <value>
                <fullName>Hepatitis</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Kidney Disease</fullName>
            </value>
            <value>
                <fullName>Lung Disease</fullName>
            </value>
            <value>
                <fullName>Lupus</fullName>
            </value>
            <value>
                <fullName>Lyme Disease</fullName>
            </value>
            <value>
                <fullName>Multiple Sclerosis</fullName>
            </value>
            <value>
                <fullName>Muscular Dystrophy</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>